=================================
Changes for Crate Admin Interface
=================================

Unreleased
==========

 - The first table in the table list is selected by default.

 - Implemented new layout for the admin-ui.

 - developer news from crate.io website are now loaded correctly into newsfeed

 - ``base_uri`` url parameter for development mode was not always recognized
   correctly

2016/11/22 0.21.3
=================

 - fixed bug that caused the cluster REST URL link in nodes view page to be unsafe.

2016/11/03 0.21.2
=================

 - fixed incorrect sql query for creating the tweets table in the tutorial.

2016/11/02 0.21.1
=================

 - Fix : Corrected the sql queries to display the table list in the tables view.

 - Corrected the sql query in the tutorial to fix the error that occured
   when tweets table was already created.

2016/10/27 0.21.0
=================

 - Added a button to clear the search field in the table list view.

 - Added Spanish translation.

2016/10/21 0.20.4
=================

 - Fix: removed chinese language from i18n configuration.

 - Fix: added english as a fallback language for translation files.

2016/10/18 0.20.3
=================

 - Fixed broken execute button in the console view.

 - Fix : Reduced the amount of log output to browser console when issuing SQL statements.

2016/10/12 0.20.2
=================

 - Fixed hyperlink on logo in navigation bar which incorreclty pointed to
   the Crate HTTP root.

2016/10/12 0.20.1
=================

 - Fixed the chart error that occured when navigating between the overview and other pages.

 - Fixed the logo URL which was not redirecting correctly.

 - Fixed an issue that caused the query history in the console view to be inconsistent.

2016/09/23 0.20.0
=================

 - Added a new console option to allow users to display the error trace when an error occurs.
